css: ensure vertical alignment of description lists
It's a bit harder to style correctly if we cannot use horizontal
padding. Changing the font to match the one from headings may do the
trick.

--- a/content/media/css/luffy.article.less
+++ b/content/media/css/luffy.article.less
@@ -309,20 +309,8 @@ main {
         list-style-type: decimal;
     }
     dt {
-        font-style: italic;
+        font-family: @font-headings;
         color: #B80F28;
-        &:before {
-            content: "— ";
-        }
-        @media @small {
-            margin-left: -@list-left-margin;
-        }
-    }
-    dd {
-        margin-left: 1.2em;
-        @media @small {
-            margin-left: 0;
-        }
     }
 
     .toc {
